refactor: converge on single core runtime
